k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
  namespace: app-ns
spec:
  ports:
    - name: tcp-ip
      port: 5678
      protocol: TCP
      targetPort: 8000
  selector:
    app: prod-app
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-db
  name: my-db
  namespace: db-ns
spec:
  ports:
    - name: tcp-ip
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: prod-db
  sessionAffinity: None
  type: ClusterIP
