k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app-ns
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-app
                port:
                  number: 5678
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus-ui
#   namespace: monitoring
#   annotations:
#     nginx.ingress.kubernetes.io/ingress-class: nginx
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /prom
#             pathType: Prefix
#             backend:
#               service:
#                 name: prometheus-service
#                 port:
#                   number: 9090
